# sofang_wrapper

./: CMakeLists.txt  Questions.md  TODO.md
Applications/runSofa/: CMakeLists.txt
Applications/runSofa/wrapper/SofaGui/: initSofaGui.h
Component/: CMakeLists.txt
Component/AnimationLoop/: CMakeLists.txt
Component/AnimationLoop/wrapper/SofaConstraint/: config.h
Component/AnimationLoop/wrapper/SofaGeneralAnimationLoop/: config.h
Component/Collision/: CMakeLists.txt
Component/Collision/Detection/: CMakeLists.txt
Component/Collision/Detection/Algorithm/: CMakeLists.txt
Component/Collision/Detection/Intersection/: CMakeLists.txt
Component/Collision/Models/: CMakeLists.txt
Component/Collision/Models/wrapper/SofaBaseCollision/: config.h
Component/Collision/Models/wrapper/SofaGeneralMeshCollision/: config.h
Component/Collision/Response/: CMakeLists.txt
Component/Collision/Response/Contact/: CMakeLists.txt
Component/Constraint/: CMakeLists.txt
Component/Constraint/Lagrangian/: CMakeLists.txt
Component/Constraint/Projective/: CMakeLists.txt
Component/Container/: CMakeLists.txt
Component/Container/wrapper/SofaBaseMechanics/: config.h
Component/Controller/: CMakeLists.txt
Component/Controller/wrapper/SofaUserInteraction/: config.h
Component/Engine/: CMakeLists.txt
Component/Engine/wrapper/SofaEngine/: config.h
Component/Engine/wrapper/SofaGeneralEngine/: config.h
Component/Engine/wrapper/SofaMiscEngine/: config.h
Component/GUI/: CMakeLists.txt
Component/GUI/Core/: CMakeLists.txt
Component/GUI/Core/wrapper/SofaGraphComponent/: config.h
Component/IO/: CMakeLists.txt
Component/IO/Mesh/: CMakeLists.txt
Component/IO/Misc/: CMakeLists.txt
Component/LinearSolver/: CMakeLists.txt
Component/LinearSolver/wrapper/SofaBaseLinearSolver/: config.h
Component/LinearSolver/wrapper/SofaDenseSolver/: config.h
Component/LinearSolver/wrapper/SofaEigen2Solver/: config.h
Component/LinearSolver/wrapper/SofaGeneralLinearSolver/: config.h
Component/LinearSolver/wrapper/SofaSparseSolver/: config.h
Component/Mapping/: CMakeLists.txt
Component/Mapping/wrapper/SofaBaseMechanics/: config.h
Component/Mapping/wrapper/SofaGeneralRigid/: config.h
Component/Mapping/wrapper/SofaRigid/: config.h
Component/ODESolver/: CMakeLists.txt
Component/ODESolver/wrapper/SofaExplicitOdeSolver/: config.h
Component/ODESolver/wrapper/SofaGeneralExplicitOdeSolver/: config.h
Component/ODESolver/wrapper/SofaGeneralImplicitOdeSolver/: config.h
Component/ODESolver/wrapper/SofaImplicitOdeSolver/: config.h
Component/PhysicalModel/: CMakeLists.txt
Component/PhysicalModel/Mass/: CMakeLists.txt
Component/PhysicalModel/SolidMechanics/: CMakeLists.txt
Component/PhysicalModel/SolidMechanics/Elasticity/: CMakeLists.txt
Component/Topology/: CMakeLists.txt
Component/Topology/DynamicContainer/: CMakeLists.txt
Component/Topology/Grid/: CMakeLists.txt
Component/Topology/Mapping/: CMakeLists.txt
Component/Topology/StaticContainer/: CMakeLists.txt
Component/Topology/wrapper/SofaBaseTopology/: config.h
Component/Topology/wrapper/SofaGeneralTopology/: config.h
Component/Topology/wrapper/SofaNonUniformFem/: config.h
Component/Topology/wrapper/SofaTopologyMapping/: config.h
Component/UI/: CMakeLists.txt
Component/Utils/: CMakeLists.txt
Component/Utils/wrapper/SofaBaseUtils/: config.h
Component/Utils/wrapper/SofaGraphComponent/: config.h
Component/Visual/: CMakeLists.txt
Component/Visual/GL/: CMakeLists.txt
Component/Visual/wrapper/SofaBaseVisual/: config.h
Component/Visual/wrapper/SofaGeneralVisual/: config.h
Component/src/sofa/component/: init.cpp  init.h
Components/: CMakeLists.txt
Components/AnimationLoop/: CMakeLists.txt
Components/AnimationLoop/wrapper/SofaConstraint/: config.h
Components/Collision/Detection/: CMakeLists.txt
Components/Collision/Detection/Algorithm/: CMakeLists.txt
Components/Collision/Detection/Intersection/: CMakeLists.txt
Components/Collision/Models/: CMakeLists.txt
Components/Collision/Response/Contact/: CMakeLists.txt
Components/Constraint/: CMakeLists.txt
Components/Constraint/Lagrangian/: CMakeLists.txt
Components/Constraint/Projective/: CMakeLists.txt
Components/Constraint/wrapper/SofaConstraint/: config.h
Components/Container/: CMakeLists.txt
Components/Container/wrapper/SofaBaseMechanics/: config.h
Components/Controller/: CMakeLists.txt
Components/Controller/wrapper/SofaUserInteraction/: config.h
Components/Engine/: CMakeLists.txt
Components/Engine/wrapper/SofaMiscEngine/: config.h
Components/GUI/Core/: CMakeLists.txt
Components/IO/: CMakeLists.txt
Components/IO/Mesh/: CMakeLists.txt
Components/IO/Misc/: CMakeLists.txt
Components/LinearSolver/: CMakeLists.txt
Components/LinearSolver/wrapper/SofaGeneralLinearSolver/: config.h
Components/LinearSolver/wrapper/SofaSparseSolver/: config.h
Components/Mapping/: CMakeLists.txt
Components/Mapping/wrapper/SofaBaseMechanics/: config.h
Components/ODESolver/: CMakeLists.txt
Components/ODESolver/wrapper/SofaExplicitOdeSolver/: config.h
Components/ODESolver/wrapper/SofaGeneralImplicitOdeSolver/: config.h
Components/ODESolver/wrapper/SofaImplicitOdeSolver/: config.h
Components/ODESolver/wrapper/SofaMiscSolver/: config.h
Components/PhysicalModel/Mass/: CMakeLists.txt
Components/PhysicalModel/SolidMechanics/: CMakeLists.txt
Components/PhysicalModel/SolidMechanics/Elasticity/: CMakeLists.txt
Components/Topology/: CMakeLists.txt
Components/Topology/wrapper/SofaNonUniformFem/: config.h
Components/Topology/wrapper/SofaTopologyMapping/: config.h
Components/Utils/: CMakeLists.txt
Components/Utils/wrapper/SofaBaseUtils/: config.h
Components/Utils/wrapper/SofaGraphComponent/: config.h
Components/Visual/: CMakeLists.txt
Components/Visual/GL/: CMakeLists.txt
Components/Visual/wrapper/SofaBaseVisual/: config.h
Components/Visual/wrapper/SofaGeneralVisual/: config.h
UI/: CMakeLists.txt
UI/Core/: CMakeLists.txt
UI/Core/wrapper/SofaGui/: config.h
UI/src/sofa/ui/: config.h.in  init.cpp  init.h
(+170 files in other folders)
