cmake_minimum_required(VERSION 3.12)


add_subdirectory(Utils)
add_subdirectory(LinearSolver)
# add_subdirectory(ODESolver)
add_subdirectory(Topology)
# add_subdirectory(PhysicalModel/Mass)
# add_subdirectory(PhysicalModel/SolidMechanics/Elasticity/Springs)
# add_subdirectory(PhysicalModel/SolidMechanics/Elasticity/FEM)
# add_subdirectory(Constraint/Projective)
# add_subdirectory(Constraint/Lagrangian) # Weird dep on Mass and Fem
# add_subdirectory(AnimationLoop) # Needs LinearSolver, Constraint
add_subdirectory(Mapping)
# add_subdirectory(Collision/Models)
# add_subdirectory(Collision/Detection/Algorithm)
# add_subdirectory(Collision/Detection/Intersection)
# add_subdirectory(Container)
# add_subdirectory(Collision/Response/Contact)
# add_subdirectory(Engine)
# add_subdirectory(Visual)
# add_subdirectory(IO/Mesh)
# add_subdirectory(IO/Misc)
# add_subdirectory(GUI/Core)
# add_subdirectory(Controller)
# # add_subdirectory(Device)
# sofa_find_package(Sofa.GL REQUIRED)
# if(Sofa.GL_FOUND)
# 	add_subdirectory(Visual/GL)
# endif()