cmake_minimum_required(VERSION 3.12)


add_subdirectory(Utils)
add_subdirectory(ODESolver)
add_subdirectory(LinearSolver)
add_subdirectory(Topology)
add_subdirectory(PhysicalModel)
add_subdirectory(Constraint)
add_subdirectory(AnimationLoop) # Needs LinearSolver, Constraint
add_subdirectory(Mapping)
add_subdirectory(Container)
add_subdirectory(Collision)
add_subdirectory(Engine)
add_subdirectory(Visual)
add_subdirectory(IO/Mesh)
add_subdirectory(IO/Misc)
# # add_subdirectory(Device)
sofa_find_package(Sofa.GL REQUIRED)
if(Sofa.GL_FOUND)
 	add_subdirectory(Visual/GL)
endif()

get_property(BUILD_MINIMAL GLOBAL PROPERTY PROPERTY_SOFA_BUILD_MINIMAL SET)
if (NOT BUILD_MINIMAL)
	add_subdirectory(GUI/Core)
	add_subdirectory(Controller)
endif()