cmake_minimum_required(VERSION 3.12)

macro(sofang_add_ui_subdirectory ComponentArg)
	string(TOUPPER ${ComponentArg} UpperComponentArg)
	option(SOFANG_ENABLE_UI_${UpperComponentArg} "Build ${ComponentArg}." ON)
	if(SOFANG_ENABLE_UI_${UpperComponentArg})
		add_subdirectory(${ComponentArg})
	endif()
endmacro()

macro(sofang_check_dependencies)
	if(${ARGC} EQUAL 0)
		message(FATAL_ERROR "sofang_check_dependencies macro needs at least one argument")
	endif()
	set(list_deps "${ARGN}")
	foreach(dep IN LISTS list_deps)
		if(NOT TARGET ${dep})
			message(FATAL_ERROR "This target needs ${dep}")
		endif()
	endforeach()
endmacro()

sofang_add_ui_subdirectory(Core)
